base/unifi/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`unifi.kouse.xyz`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: unifi-network-application
      namespace: unifi
      port: 8443
      scheme: https
      serversTransport: unifi
  tls:
    certResolver: default
    domains:
      - main: "kouse.xyz"
        sans:
          - "*.kouse.xyz"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-local
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`unifi.nuc.lan`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: unifi-network-application
      namespace: unifi
      port: 8443
      scheme: https
      serversTransport: unifi
